# premierleague

./: .env  .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  add_auth_translations.py  add_swedish_translations.py  fix_duplicate_translations.py  package-lock.json  package.json  pyproject.toml  quick_api_test.py  tailwind.config.js  test_api_integration.py  test_error_pages.py  test_tabs.html
apps/cart/: admin.py  context_processors.py  models.py  urls.py  views.py
apps/core/: context_processors.py  error_views.py  models.py  test_views.py  translations.py  urls.py  utils.py  views.py
apps/shop/: admin.py  models.py  urls.py  views.py
config/: middleware.py  urls.py
config/settings/: base.py  development.py  production.py
docs/: i18n-implementation.md
static/: compress_static.py
static/css/: input.css  input.css.br  output.css.br
static/data/: betting-odds.json  fixtures.json  fixtures.json.br  news.json  news.json.br  players.json  products.json  products.json.br  teams.json
static/js/: ScrollTrigger.min.js.br  alpine-persist.min.js.br  business-loans.js.br  business-loans.min.js  critical-inline.js  main.js  main.js.br  main.min.js  site-optimized.js  site-optimized.js.br
staticfiles/css/: business-loans-critical.css  business-loans-critical.css.br  business-loans.css  business-loans.css.br  business-loans.min.css  business-loans.min.css.br  input.css  output.css  output.min.css  output.min.css.br  site-optimized.css  site-optimized.css.br  site-optimized.min.css  site-optimized.min.css.br
staticfiles/data/: betting-odds.json  betting-odds.json.br  league-table.json  league-table.json.br  players.json.br  products.json  teams.json.br
staticfiles/images/: arsenal.svg.br  aston-villa.svg.br  bournemouth.svg.br  brentford.svg.br  brighton.svg.br  chelsea.svg.br  crystal-palace.svg.br  everton.svg.br  fulham.svg.br  leicester.svg.br  liverpool.svg.br  manchester-city.svg.br  manchester-united.svg.br  newcastle.svg.br  nottingham-forest.svg.br  southampton.svg.br  (+4 more)
templates/: base.html
(+151 files in other folders)
